--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "prebuild": "yarn add -D typescript@5.7.3 @types/node@22.13.5 @types/react@19.0.8 @types/react-dom@19.0.3",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -18,8 +17,8 @@
 
   "dependencies": {
     "next": "15.5.12",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "next-auth": "5.0.0-beta.20",
     "next-themes": "0.4.6",
     "react-hook-form": "7.54.2",
@@ -47,14 +46,7 @@
     "autoprefixer": "10.4.20",
     "typescript": "5.7.3",
     "@types/node": "22.13.5",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3"
-  },
-
-  "peerDependencies": {
-    "typescript": "5.7.3",
-    "@types/node": "22.13.5",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3"
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
