--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "packageManager": "yarn@1.22.19",
+
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
+
   "prisma": {
     "schema": "packages/db/prisma/schema.prisma"
   },
+
   "scripts": {
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
@@ -22,23 +25,21 @@
     "postinstall": "prisma generate",
     "clean": "turbo run clean && rm -rf node_modules .turbo"
   },
+
   "resolutions": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "typescript": "5.7.3",
     "@types/node": "22.13.5",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3"
   },
-  "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "prisma": "^5.22.0"
-  },
+
   "devDependencies": {
-    "@types/node": "^22.13.5",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/node": "22.13.5",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "turbo": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "5.7.3"
   }
 }
