--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,19 +1,48 @@
 {
-  "name": "@cursorcode/db",
-  "version": "1.0.1",
+  "name": "@cursorcode/web",
+  "version": "1.4.5",
   "private": true,
-  "main": "index.ts",
-  "types": "index.ts",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
-    "generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "dev": "yarn workspace db generate && next dev",
+    "build": "yarn workspace db generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@prisma/client": "5.22.0"
+    "next": "15.5.12",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "next-auth": "5.0.0-beta.20",
+    "next-themes": "0.4.6",
+    "react-hook-form": "7.54.2",
+    "@hookform/resolvers": "3.9.1",
+    "zod": "3.24.1",
+    "axios": "1.7.9",
+    "lucide-react": "0.473.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "tailwind-merge": "2.6.0",
+    "sonner": "1.7.4",
+    "recharts": "2.15.1",
+    "date-fns": "3.6.0",
+    "usehooks-ts": "3.1.1",
+    "@tanstack/react-query": "5.66.0",
+    "@cursorcode/ui": "1.0.1",
+    "@cursorcode/db": "1.0.1",
+    "@cursorcode/types": "1.0.1",
+    "@simplewebauthn/browser": "^13.1.0"
   },
   "devDependencies": {
-    "prisma": "5.22.0"
+    "tailwindcss": "3.4.17",
+    "postcss": "8.5.3",
+    "autoprefixer": "10.4.20",
+    "typescript": "5.7.3",
+    "@types/node": "22.13.5",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
