--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,13 +7,11 @@
   "scripts": {
     "prisma:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
+    "db:migrate": "prisma migrate deploy",
     "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "5.22.0"
-  },
-  "devDependencies": {
+    "@prisma/client": "5.22.0",
     "prisma": "5.22.0"
   }
 }
