--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,7 +52,12 @@
     "@cursorcode/db": "1.0.1",
     "@cursorcode/types": "1.0.1",
 
-    "@simplewebauthn/browser": "^13.1.0"
+    "@simplewebauthn/browser": "^13.1.0",
+
+    "typescript": "5.7.3",
+    "@types/node": "22.13.5",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   },
 
   "devDependencies": {
@@ -60,11 +65,6 @@
 
     "postcss": "8.5.3",
 
-    "autoprefixer": "10.4.20",
-
-    "typescript": "5.7.3",
-    "@types/node": "22.13.5",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3"
+    "autoprefixer": "10.4.20"
   }
 }
